# iot-challenge

./: .gitignore  README.md
Camera_node/Camera_detect/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig
Camera_node/Camera_detect/components/modules/: CMakeLists.txt
Camera_node/Camera_detect/components/modules/ai/: who_human_face_detection.cpp  who_human_face_detection.hpp
Camera_node/Camera_detect/components/modules/udp/: who_udp.h
Camera_node/Camera_detect/components/modules/web/: app_httpd.cpp
Camera_node/Camera_detect/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_main.cpp  app_priv.h
Camera_node/en_speech_commands_recognition/: .project
Camera_node/en_speech_commands_recognition/main/: main.c
Camera_node/terminal/: .cproject  .project  CMakeLists.txt  sdkconfig
Camera_node/terminal/main/: app_main.cpp
Camera_node/web_socket/: .cproject  .project  sdkconfig
Camera_node/web_socket/main/: udp_client.c
Plug_node/KWS/include/: README
Plug_node/PCB_Node_ChapHanh/: PCB2.PcbDoc  PCB_Node_ChapHanh.PrjPcb  Sheet1.SchDoc
Sensor_node/PCB_Project_Node_Sensor_Ver2/: Node_Sensor_Schematic.SchDoc  PCB_Project_Node_Sensor.PrjPcb  PCB_Project_Node_Sensor.PrjPcbStructure
Sensor_node/Screen_v2/: new_partition.csv
Sensor_node/Screen_v3/: platformio.ini
Sensor_node/SquareLine_Project/: lv_conf.h
duong/: testgpio.ino
minh/KWS/: README.md  platformio.ini
ngocanh/IoT_chalange/: sdkconfig  sdkconfig.old
ngocanh/en_speech_commands_recognition/: sdkconfig
test_git/: hello.txt
viet/17.TFT_AIoT/: platformio.ini
(+131 files in other folders)
